--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,4 @@
-.container-challenge-1 {
+.container-challenge-1, .rpc-game-container{
     width: 70%;
     margin: 0 auto;
     /* background-color: #01535f; */
@@ -10,7 +10,7 @@
     color: #00FF66;
 }
 
-.main-ageInDays-container {
+.main-ageInDays-container, .rpc-game-container{
     display: flex;
     padding: 10px;
     justify-content: space-around;
@@ -49,4 +49,16 @@
 .flex-box-container-2 img {
     margin: 10px;
     box-shadow: 0px 10px 50px rgba(0, 0, 0, 0.7);
+}
+
+.container-3 {
+    margin-top: 30px;
+    text-align: center;
+}
+
+.rpc-game-container img{
+    cursor: pointer;
+}
+.rpc-game-container img:hover {
+    box-shadow: 0px 10px 50px rgba(37, 50, 233, 1);
 }
