--- a/static/css/style.css
+++ b/static/css/style.css
@@ -62,3 +62,9 @@
 .rpc-game-container img:hover {
     box-shadow: 0px 10px 50px rgba(37, 50, 233, 1);
 }
+
+#rpc-ans {
+    margin-top: 35px;
+    text-align: center;
+    /* justify-content: center; */
+}
