--- a/static/css/style.css
+++ b/static/css/style.css
@@ -59,7 +59,7 @@
 .rpc-game-container img{
     cursor: pointer;
 }
-.rpc-game-container img:hover {
+.all-button:hover {
     box-shadow: 0px 10px 50px rgba(37, 50, 233, 1);
 }
 
@@ -67,4 +67,40 @@
     margin-top: 35px;
     text-align: center;
     /* justify-content: center; */
+}
+
+.rpc-win {
+    box-shadow: 0px 10px 50px rgb(37, 233, 102);
+}
+
+.rpc-tie {
+    box-shadow: 0px 10px 50px rgb(255, 217, 0);
+}
+
+.button-reset {
+    margin-top: 32px;
+    box-sizing: border-box;
+    margin-bottom: 20px;
+    padding: 10px;
+}
+
+.rpc-lose {
+    box-shadow: 0px 10px 50px rgb(233, 37, 37);
+}
+
+.button-reset span {
+    color: white;
+    background-color: rgb(220, 53, 69);
+    box-sizing: border-box;
+    border: 2px solid;
+    padding: 12px;
+    border-radius: 50px;
+    cursor: pointer;
+    transition: all 0.2s ease;
+    border-color: white;
+}
+
+.button-reset span:hover {
+    padding-left: 30px;
+    padding-right: 30px;
 }
